Fix word break on large strings

--- a/packages/compass-aggregations/src/components/input-preview/input-preview.less
+++ b/packages/compass-aggregations/src/components/input-preview/input-preview.less
@@ -30,6 +30,10 @@
           padding: 0px;
         }
       }
+
+      .element-value-is-string {
+        word-break: normal;
+      }
     }
   }
 }
